RESOLVED FIXED186114
Fix leak of a CVPixelBufferRef due to an early return in -[RTCVideoEncoderH264 encode:codecSpecificInfo:frameTypes:]
https://bugs.webkit.org/show_bug.cgi?id=186114
Summary Fix leak of a CVPixelBufferRef due to an early return in -[RTCVideoEncoderH26...
David Kilzer (:ddkilzer)
Reported 2018-05-30 16:17:08 PDT
Fix leak of a CFPixelBuffer due to early rerturn in -[RTCVideoEncoderH264 encode:codecSpecificInfo:frameTypes:].
Attachments
Patch v1 (3.04 KB, patch)
2018-05-30 16:27 PDT, David Kilzer (:ddkilzer)
no flags
Patch v2 (3.07 KB, patch)
2018-05-30 16:34 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2018-05-30 16:27:28 PDT
Created attachment 341615 [details] Patch v1
Radar WebKit Bug Importer
Comment 2 2018-05-30 16:29:10 PDT
Radar WebKit Bug Importer
Comment 3 2018-05-30 16:29:11 PDT
David Kilzer (:ddkilzer)
Comment 4 2018-05-30 16:33:15 PDT
David Kilzer (:ddkilzer)
Comment 5 2018-05-30 16:34:15 PDT
Created attachment 341618 [details] Patch v2
WebKit Commit Bot
Comment 6 2018-05-30 17:18:52 PDT
Comment on attachment 341618 [details] Patch v2 Clearing flags on attachment: 341618 Committed r232322: <https://trac.webkit.org/changeset/232322>
WebKit Commit Bot
Comment 7 2018-05-30 17:18:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.