Fix leak of a CVPixelBufferRef due to early rerturn in -[RTCVideoEncoderH264 encode:codecSpecificInfo:frameTypes:] <https://webkit.org/b/186114> <rdar://problem/40668097>

Reviewed by Eric Carlson.

* Source/webrtc/sdk/objc/Framework/Classes/VideoToolbox/RTCVideoEncoderH264.mm:
(-[RTCVideoEncoderH264 encode:codecSpecificInfo:frameTypes:]):
Call CVBufferRelease(pixelBuffer) before early return to free
it.
* WebKit/0010-Fix-RTCVideoEncoderH264-CVPixelBuffer-leak.patch: Add.


Canonical link: https://commits.webkit.org/201545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232322 268f45cc-cd09-0410-ab3c-d52691b4dbfc